cluster/apps/networking/static-routes/octoprint/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octoprint
  namespace: networking
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: simple-icons:octoprint
    hajimari.io/group: Home

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - octoprint.${SECRET_CLUSTER_DOMAIN}

  rules:
    - host: octoprint.${SECRET_CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: octoprint
                port:
                  name: http
